Update
- Removed duplicate enums like FilterMode in favor of the MDLX ones, so all of the logic can use the same enums.
- Removed all tags/flags from the different objects and added proper named and typed members instead.
- Removed the MaterialView and LayerView interfaces.
- More cleaning.